# kedro-starters

./: .bumpversion.cfg  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: prepare-release.yml  publish.yml  test.yml
getindata_kedro_starters/: starters.py
getindata_kedro_starters/pyspark-iris-running-on-gcp-dataproc-serverless/: ADJUSTMENTS.md  README.md  cookiecutter.json  prompts.yml
getindata_kedro_starters/pyspark-iris-running-on-gcp-dataproc-serverless/{{ cookiecutter.repo_name }}/: .dockerignore  Dockerfile  README.md
getindata_kedro_starters/pyspark-iris-running-on-gcp-dataproc-serverless/{{ cookiecutter.repo_name }}/conf/dataproc-serverless/: catalog.yml
getindata_kedro_starters/pyspark-iris-running-on-gcp-dataproc-serverless/{{ cookiecutter.repo_name }}/infrastructure/: main.tf  variables.tf
getindata_kedro_starters/pyspark-iris-running-on-gcp-dataproc-serverless/{{ cookiecutter.repo_name }}/src/: entrypoint.py
getindata_kedro_starters/pyspark-iris-running-on-gke/: ADJUSTMENTS.md  README.md  cookiecutter.json  prompts.yml
getindata_kedro_starters/pyspark-iris-running-on-gke/{{ cookiecutter.repo_name }}/: Dockerfile  README.md  job.yaml  pod_template.yaml
getindata_kedro_starters/pyspark-iris-running-on-gke/{{ cookiecutter.repo_name }}/infrastructure/: .gitignore  main.tf  variables.tf
getindata_kedro_starters/pyspark-iris-running-on-gke/{{ cookiecutter.repo_name }}/src/: requirements.txt
(+5 files in other folders)
