[tool.poetry]
name = "getindata-kedro-starters"
version = "0.1.1"
description = "Starters for kedro projects to simplify pipelines deployment using GetInData plugins"
readme = "README.md"
authors = ['Michał Bryś <michal.brys@getindata.com>', 'Mariusz Strzelecki <mariusz.strzelecki@getindata.com>']
maintainers = []
homepage = "https://github.com/getindata/kedro-starters"
repository = "https://github.com/getindata/kedro-starters"
documentation = "https://getindata-kedro-starters.readthedocs.io/"
keywords = ['kedro', 'kedro starters', 'mlops']
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta", # license and python versions added automatically
]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.isort]
known_third_party = ["pydantic","semver","setuptools"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "<7"
pytest-cov = ">=2.8.0, <4.0.0"
tox = ">=3.25.1"
pre-commit = "2.20.0"

[tool.poetry.plugins."kedro.starters"]
"starter" = "getindata_kedro_starters.starters:starters"
